feat: lấy tiêu đề và thumbnail YouTube trực tiếp
- Thêm fetchYouTubeMeta() để lấy metadata từ YouTube oEmbed API
- Lấy thumbnail + tiêu đề ngay khi thêm link (không cần chờ Analyze)
- Cập nhật UI hiển thị thumbnail ngay cả khi chưa ready
- Sử dụng hqdefault.jpg từ YouTube CDN để nhanh hơn